--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.1.1",
     "@types/node": "^22.7.7",
     "typescript": "^5.5.3",
     "vite": "^5.4.8"
